update at work. Added AccountController with all the various connections.

--- a/MVCApp/Views/Home/SignUp.cshtml
+++ b/MVCApp/Views/Home/SignUp.cshtml
@@ -1,4 +1,4 @@
-﻿@model MVCDataFromDatabaseToForm.Models.EmployeeModel
+﻿@model MVCApp.Models.EmployeeModel
 
 @{
     ViewBag.Title = "Employee Sign Up";
