--- a/MVCApp/Views/Home/ViewEmployees.cshtml
+++ b/MVCApp/Views/Home/ViewEmployees.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MVCDataFromDatabaseToForm.Models.EmployeeModel>
+﻿@model IEnumerable<MVCApp.Models.EmployeeModel>
 
 @{
     ViewBag.Title = "ViewEmployees";
