--- a/MVCApp/Views/Shared/_Layout.cshtml
+++ b/MVCApp/Views/Shared/_Layout.cshtml
@@ -22,7 +22,9 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Sign Up", "SignUp", "Home")</li>
-                    <li>@Html.ActionLink("View Employees","ViewEmployees","Home")</li>
+                    <li>@Html.ActionLink("View Employees", "ViewEmployees", "Home")</li>
+                    <li>@Html.ActionLink("New Account", "NewAccount", "Account")</li>
+                    <li>@Html.ActionLink("View Accounts", "ViewAccounts", "Account")</li>
 
                 </ul>
             </div>
